k8s/department-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: department-service-app
  labels:
    app: department-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: department-service-app
  template:
    metadata:
      labels:
        app: department-service-app
    spec:
      containers:
        - name: department-service-app
          image: department-service-app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080


---
apiVersion: v1
kind: Service
metadata:
  name: department-service-svc
spec:
  ports:
    - targetPort: 8080
      port: 80
  selector:
    app: department-service-app
