k8s/api-gateway-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-app
  labels:
    app: api-gateway-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway-app
  template:
    metadata:
      labels:
        app: api-gateway-app
    spec:
      containers:
        - name: api-gateway-app
          image: api-gateway-app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-svc
spec:
  type: NodePort
  ports:
    - targetPort: 9001
      port: 80
      protocol: TCP
  selector:
    app: api-gateway-app

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: my-api.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway-svc
                port:
                  number: 80
